# WSU_Cpts_322

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: user-story.md
attendance_tracker/: __init__.py  app.py  downloadCSV  package-lock.json  package.json
attendance_tracker/controllers/: admin.py  analytics.py  auth.py  download_csv.py  ingest.py
attendance_tracker/email/: download_csv.py
attendance_tracker/src/: input.css
attendance_tracker/static/: style.css
attendance_tracker/templates/: add_club.html  admin_home.html  analytics.html  assign_club.html  base.html  club_config.html  club_search.html  dashboard.html  data_view.html  index.html  login.html  room_usage.html
attendance_tracker/templates/src/: input.css
attendance_tracker/types/: __init__.py  tables.py
docs/: exampleDataWithDates.csv  exampleRoomLogData.csv  exampleTransactionHistory.csv  sprint1_report.md  sprint2_report.md
resources/: links.md
sqlite/: init.sql
tools/: start_server.sh  tailwind_watch.sh  tailwindcss.sh
