[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "322"
dynamic = ["version"]
requires-python = ">= 3.11"
authors = [ # put your name, email here!
    {name = "Gavin Travis", email = "gavin.travis@wsu.edu"},
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "isort",
]

[tool.ruff]
line-length = 80 # max line length
select = "ALL" # enable all rules for now, we can peel back the ones we dont like as we go!
exclude = [".venv", "*.md", ".egg*", ".git", ".gitignore"] # stuff not to lint + format
