[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "322"
dynamic = ["version"]
requires-python = ">= 3.11"
authors = [ # put your name, email here!
    {name = "Gavin Travis", email = "gavin.travis@wsu.edu"},
]
dependencies = [
    "requests",
    "flask",
    "Jinja2",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "isort",
    "pyright",
]

[tool.setuptools.packages.find]
where = ["attendance_tracker"]

[tool.ruff]
line-length = 80 # max line length
select = ["ALL"] # enable all rules for now, we can peel back the ones we dont like as we go!
exclude = [".venv", "*.md", ".egg*", ".git", ".gitignore"] # stuff not to lint + format

[tool.pyright]
venvPath = "."
